fixed spacing

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -123,6 +123,12 @@ p.btn {
     .project-name {
       margin-top: -5em;
     }
+    #Archives {
+      margin-right: 10vw;
+    }
+    #About {
+      margin-left: 10vw;
+    }
   }
 }
 
